kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-goose
  labels:
    app: hello-goose
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-goose
  template:
    metadata:
      labels:
        app: hello-goose
    spec:
      containers:
      - name: hello-goose
        image: docker.io/emreyokur/hello-goose:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "2005m"
