kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-goose
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-goose
  type: LoadBalancer
